cluster/apps/home/frigate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app frigate
  namespace: home
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  selector:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
